<!--
  ~ Copyright (C) 2020 WBPBP <potados99@gmail.com>
  ~
  ~ This file is part of Preshoes (https://github.com/WBPBP).
  ~
  ~ Preshoes is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Preshoes is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Preshoes</string>
    <string name="title_home">홈</string>
    <string name="title_diagnose">진단</string>
    <string name="title_report">결과</string>
    <string name="title_workout">운동</string>
    <string name="title_settings">설정</string>
    <string name="description_foot">A foot vector image.</string>
    <string name="button_start_diagnose">진단 시작하기</string>
    <string name="text_no_device_connected">연결된 기기가 없습니다</string>
    <string name="button_connect_device">연결하기</string>
    <string name="text_realtime">실시간</string>
    <string name="text_battery">배터리</string>
    <string name="text_left">L</string>
    <string name="text_right">R</string>
    <string name="description_settings_icon">설정 아이콘입니다</string>
    <string name="text_settings">설정</string>
    <string name="title_activity_settings">Settings</string>
    <string name="text_information_unavailable">정보 없음</string>
    <string name="title_connect_device">기기 연결</string>
    <string name="text_please_connect_device">압력 측정을 위해 Preshoes 센서 모듈이 필요합니다. 아래 버튼을 눌러 연결하여 주세요.</string>
    <string name="title_unified_diagnosis">통합 족압 검사</string>
    <string name="description_unified_diagnosis">정적 족저압 검사와 짧은 걷기로 이루어진 검사입니다. 양 발 무게 균형, 보행 시 발 각도 등 다양한 특징을 진단할 수 있습니다.</string>
    <string name="description_horizontal_bias">양 발 중심 편향</string>
    <string name="description_score">바른 걸음걸이</string>
    <string name="description_walks">걸음 수</string>
    <string name="description_logo_image">로고 이미지</string>
    <string name="title_details">상세 보기</string>
    <string name="title_horizontal_bias_variation">수평 무게 중심 변화</string>
    <string name="title_static_horizontal_bias">정적 압력 분포 가로 편향</string>
    <string name="description_elapsed_time">소요 시간</string>
    <string name="description_measure_date">측정 일자</string>
    <string name="description_please_be_ready">양 발로 바르게 선 다음 시작 버튼을 눌러 주세요.</string>
    <string name="button_start">시작</string>
    <string name="button_finish">종료</string>
    <string name="button_resume">계속</string>
    <string name="description_static_diagnosis">바른 자세로 서 주세요.</string>
    <string name="description_walk_diagnosis">일정한 속도로 걸어 주세요.</string>
    <string name="description_keep_next_is_walk">계속 버튼을 누른 뒤 천천히 걸어 주세요.</string>
    <string name="description_diagnosis_done">검사가 종료되었습니다. 감사합니다.</string>
    <string name="notify_report_deleted">보고서가 삭제되었습니다.</string>
    <string name="fail_report_delete_failed">보고서를 삭제하지 못 하였습니다.</string>
    <string name="description_no_reports">보고서가 없습니다. 진단 후 이곳에서 결과를 받아보실 수 있습니다.</string>
    <string name="notify_session_canceled">검사가 중단되었습니다.</string>
    <string name="fail_session_cancel_error">검사를 중단하는 도중 오류가 발생하였습니다.</string>
    <string name="title_standing_analysis">정적 분석</string>
    <string name="title_walking_analysis">걸음걸이 분석</string>
    <string name="title_medical_prediction">발생이 우려되는 질환</string>
    <string name="title_login">로그인</string>
    <string name="title_join">회원가입</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="button_sign_up">회원가입</string>
    <string name="button_sign_in">로그인</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">이메일이 올바르지 않습니다.</string>
    <string name="invalid_password">비밀번호는 다섯 글자가 넘어야 합니다.</string>
    <string name="fail_wrong_auth">이메일이나 비밀번호를 확인하여 주세요.</string>
    <string name="fail_server_connection">서버와의 연결에 실패하였습니다.</string>
    <string name="fail_unknown">알 수 없는 이유로 요청을 처리하는 데에 실패하였습니다.</string>
    <string name="notify_press_again_to_exit">뒤로 가기를 한 번 더 누르면 앱이 종료됩니다.</string>
    <string name="fail_wrong_join_request">회원가입에 실패하였습니다. 이메일을 확인해 주세요.</string>
    <string name="notify_join_success">회원가입이 완료되었습니다.</string>
    <string name="button_join">회원가입</string>
    <string name="description_privacy">Preshoes는 사용자를 위해 맞춤 분석을 제공하고 결과를 보관하기 위해 다음 정보를 수집합니다:\n\n- 이메일 주소\n- 비밀번호\n\n수집한 개인 정보는 사용자가 서비스를 탈퇴하는 시점까지 보관됩니다. 회원가입을 진행하는 것은 이에 동의하는 것으로 간주됩니다.</string>
    <string name="title_hi">안녕하세요 :)</string>
    <string name="description_registration_needed">Preshoes 서비스 이용을 위해 회원가입이 필요합니다.</string>
    <string name="disease_name_0">건강하시군요 :)</string>
    <string name="disease_name_1">요추추간판탈출증(Spinal disc herniation)</string>
    <string name="disease_name_2">고관절염(Arthritis of the hip joint)</string>
    <string name="disease_name_3">연골연화증(Chondromalacia)</string>
    <string name="disease_name_4">관절염(Arthritis)</string>
    <string name="disease_name_negative">분석을 제공할 수 없습니다 :(</string>
    <string name="disease_name_unknown">개발자가 이상해요!</string>

</resources>
