<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 WBPBP <potados99@gmail.com>
  ~
  ~ This file is part of Preshoes (https://github.com/WBPBP).
  ~
  ~ Preshoes is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Preshoes is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="vm"
            type="org.wbpbp.preshoes.feature.account.JoinViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar -->
        <androidx.appcompat.widget.Toolbar
            app:title="@string/title_join"
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Content -->
        <LinearLayout
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent">

            <!-- Hi -->
            <TextView
                style="@style/TextBigAndThick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_hi" />

            <!-- Registration needed -->
            <TextView
                style="@style/TextSecondary"
                android:gravity="center"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_registration_needed" />

            <!-- Email -->
            <EditText
                error="@{vm.joinFormState.usernameError}"
                android:text="@={vm.username}"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"/>

            <!-- Password -->
            <EditText
                error="@{vm.joinFormState.passwordError}"
                android:text="@={vm.password}"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <!-- Privacy -->
            <TextView
                style="@style/TextSecondary"
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_privacy" />

            <!-- Submit button -->
            <Button
                style="@style/BigButton"
                android:id="@+id/join"
                android:onClick="@{() -> vm.join()}"
                android:enabled="@{vm.joinFormState.dataValid}"
                android:text="@string/button_sign_up"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:layout_constraintVertical_bias="0.2" />

            <!-- Loading bar -->
            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:id="@+id/loading"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}" />

        </LinearLayout>

        <!-- Toolbar shadow -->
        <View
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:background="@drawable/shadow"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/toolbar_shadow" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>