<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 WBPBP <potados99@gmail.com>
  ~
  ~ This file is part of Preshoes (https://github.com/WBPBP).
  ~
  ~ Preshoes is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Preshoes is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="org.wbpbp.preshoes.feature.diagnose.DiagnoseViewModel" />
    </data>
    
    <androidx.cardview.widget.CardView
        android:layout_marginTop="24dp"
        style="@style/SectionCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Title -->
            <TextView
                style="@style/TextBigAndThick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_unified_diagnosis"/>

            <!-- Description -->
            <TextView
                android:layout_marginTop="12dp"
                style="@style/TextPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_unified_diagnosis"/>

            <!-- Start button -->
            <Button
                android:layout_marginTop="12dp"
                style="@style/BigButton"
                android:layout_width="match_parent"
                android:text="@string/button_start_diagnose"
                android:onClick="@{vm::startUnifiedDiagnosis}"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>