<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2020 WBPBP <potados99@gmail.com>
  ~
  ~ This file is part of Preshoes (https://github.com/WBPBP).
  ~
  ~ Preshoes is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Preshoes is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="vm"
            type="org.wbpbp.preshoes.feature.home.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="@{!vm.deviceComplete ? View.VISIBLE : View.GONE}">

        <!-- Title -->
        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_connect_device" />

        <!-- Content -->
        <androidx.cardview.widget.CardView
            style="@style/SectionCard"
            android:id="@+id/connect_suggestion_section">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Body -->
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginBottom="12dp"
                    style="@style/TextPrimary"
                    android:id="@+id/no_device_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/text_please_connect_device"/>

                <!-- Connect button -->
                <Button
                    style="@style/BigButton"
                    android:id="@+id/connect_device_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/no_device_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:onClick="@{() -> vm.onConnectButtonClick()}"
                    android:text="@string/button_connect_device"/>

                <!-- Connecting progress bar -->
                <ProgressBar
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:visibility="@{vm.connectingInProgress ? View.VISIBLE : View.GONE}" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>